# learn_wgpu

./: .gitignore  Cargo.toml  README.md  imgui.ini
.cargo/: config.toml
assets/learn_opengl/container2/: cube.mtl
src/: Config.toml  build.rs  camera.rs  depth_pass.rs  input.rs  instances.rs  light.rs  light.wgsl  main.rs  material.rs  mesh.rs  model.rs  obj_loader.rs  render_phase.rs  render_phase_3d.rs  renderer.rs  renderer_plugin.rs  resources.rs  shader.vert  shader.wgsl  shader2.frag  shader2.vert  shader_challenge.wgsl  shapes.rs  state.rs  texture.rs  transform.rs
src/bind_groups/: mesh_view.rs
src/depth_pass/: depth.wgsl  mod.rs
src/egui_plugin/: mod.rs
src/obj_loader/: loader.rs  mod.rs
src/renderer/: plugin.rs  render_phase_3d.rs
src/renderer/bind_groups/: material.rs  mesh_view.rs
src/renderer/shaders/: shader.wgsl
src/shaders/: depth.wgsl  light.wgsl  shader.wgsl
src/shapes/: capsule.rs  cube.rs  cylinder.rs  mod.rs  plane.rs  sphere.rs
