[package]
name = 'learn_wgpu'
version = '0.1.0'
authors = ['IceSentry <c.giguere42@gmail.com>']
edition = '2021'
build = "src/build.rs"

[dependencies]
wgpu = "0.12"
env_logger = "0.9"
winit = "0.26.1"
futures = "0.3"
# bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = [
#     "bevy_winit",
# ] }
# bevy = { version = "0.7", default-features = false, features = ["bevy_winit"] }
# bevy = { git = "https://github.com/bevyengine/bevy" }
bevy = "0.7"
log = "0.4"
bytemuck = { version = "1.7", features = ["derive"] }
image = "0.24"
anyhow = "1.0.57"
tobj = { version = "3.2.2", features = ["async"] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
