[package]
name = 'learn_wgpu'
version = '0.1.0'
authors = ['IceSentry <c.giguere42@gmail.com>']
edition = '2021'

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
wgpu = "0.12"
env_logger = "0.9"
winit = "0.26.1"
bevy = { git = "https://github.com/bevyengine/bevy" }
log = "0.4"
bytemuck = { version = "1.7", features = ["derive"] }
image = "0.24"
anyhow = "1.0"
tobj = { version = "3.2.2", features = ["async"] }
futures-lite = "1.12.0"
egui = { git = "https://github.com/emilk/egui" }
egui-wgpu = { git = "https://github.com/emilk/egui" }
egui-winit = { git = "https://github.com/emilk/egui" }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
